# voteoff-server

./: docker-compose.yaml  pyproject.toml
.github/workflows/: deploy.yaml  lint-check.yaml
src/config/: api.py  schema.py  settings.py  urls.py
src/user/: api.py  schema.py
src/user/migrations/: 0001_initial.py
src/vote/: api.py  models.py  schemas.py  tests.py
src/vote/migrations/: 0001_initial.py  0002_ballot_created.py  0003_alter_ballot_token.py  0004_alter_event_electoral_system.py  0005_event_show_results.py  0006_event_status.py  0007_alter_event_status.py
