[project]
name = "server"
version = "0.1.0"
description = ""
authors = [
    {name = "Jesudas Joseph",email = "jesudasmjoseph@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<=3.13"
dependencies = [
    "django (>=5.2.6,<6.0.0)",
    "django-ninja (==1.4)",
    "environs (>=14.3.0,<15.0.0)",
    "psycopg (>=3.2.10,<4.0.0)",
    "pydantic (==2.11)",
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
ruff = "^0.13.2"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
